add pgvector driver